0023901: Memory leaks in tests Removed a field from BOPDS_PaveBlock that contained  the BOPDS_PaveBlock object itself. Function RealPaveBlock() now returns a const handle, not a const reference to handle. Removed const modifier because function now returns an object, not a reference to it.